# ManiSkill

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  1_quickstart.ipynb  CITATION.cff  CITATION_MS2.cff  CONTRIBUTING.md  Dockerfile  LICENSE-3RD-PARTY  README.md  WORKING SHIT .ipynb  cheetah.xml  create_xformer_cuda_env_pip.sh  demo_vec_env.py  gpu_notes.md  humanoid.xml  lerobot_example.py  logs  out  ppo_jan.py  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_octo.txt  run.py  setup.py  test-widowxai-grasp.py  test.py
.circleci/: config.yml
docker/: Dockerfile  build_docker.sh  environment.yaml  environment.yml  nvidia_icd.json  nvidia_layers.json  run_docker.sh
docs/: .gitignore  README.md  generate_robot_docs.py  generate_task_docs.py  requirements.txt
examples/: demo_manual_control.py  demo_random_action.py  demo_vec_env.py
koch_calibration/: main_follower.json
mani_skill/: __init__.py
mani_skill/assets/robots/anymal-c/: README.md  package.xml
mani_skill/assets/robots/anymal-c/config/rviz/: standalone.rviz
mani_skill/assets/robots/anymal-c/launch/: load.launch  standalone.launch
mani_skill/assets/robots/anymal-c/urdf/: anymal.urdf  anymal_old.urdf  anymal_original.urdf
mani_skill2/: __init__.py
mani_skill2/assets/robots/anymal-c/: CMakeLists.txt
mani_skill2/assets/robots/anymal-c/urdf/: anymal.srdf
manualtest/: basic_replay.py  contact_pair_impulse_test.py  convert_assets_to_glb.py  enc.py  gpu.py  gpu_test.py  gpu_viewer.py  humanoid.py  load_demo.py  load_mjcf.py  mem_check.py  mem_leak_test.py  (+13 more)
(+2112 files in other folders)
